--- a/fontend/package.json
+++ b/fontend/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.4.0",
     "axios": "^1.3.5",
+    "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0"
